# CompositionEmployee

./: BasePlusCommissionEmployee.cpp  BasePlusCommissionEmployee.h  CMakeLists.txt  CommissionEmployee.h  CompositionEmployee  Makefile  README.md  compile.sh  main.cpp  push2git.sh
